tests/fixtures/files/syntax_errors/synerr_with_error.tmp
*** WARNINGS/ERRORS INDEPENDENT OF SYNTAX CHECKER ***
KW   Alternative splicing; Chromophoe; Disulfide bond;
 NOT FOUND IN ENTRY: Q6VZZ7
*** NEW WARNINGS/ERRORS GENERATED BY THE LOG FILE ***
chkfile.tmp  OPN5_MOUSE      Q6VZZ7      RP - FATAL ERROR: [6] line 'FUNCTION, AND TISSUE SPECIFICITY' does not end with a period.
chkfile.tmp  OPN5_MOUSE      Q6VZZ7      CC/KW SUBCELLULAR LOCATION - ERROR: missing keyword 'Cell membrane'.
*** ORIGINAL WARNINGS/ERRORS LIST ***
orichk.tmp   OPN5_MOUSE      Q6VZZ7      RP/FT - WARNING: FT VAR_SEQ, but at least one sequence/alternative splicing reference does not mention 'ISOFORM'
